--- a/07-PE_Univariados.Rmd
+++ b/07-PE_Univariados.Rmd
@@ -1288,6 +1288,98 @@ plot(dlprice_amazn_ts, xlab = "Tiempo",
      main = "Diff LN de precios de apertura", 
      col = "darkred")
 ```
+Veamos con detenimiento el pico de la grafica original.
+
+Es claro que este pico se da en 2020 desde junio hasta julio, probablemente causado por el aumento del uso en amzn durante la pandemia. Esos son outlier que debemos considerar. Por ello hay que marcarlos con una variable dummy.
+```{r}
+#Generamos el rango de tiempo
+junio2020 <- seq.Date(
+  from=as.Date("2020-06-01"),
+  to=as.Date("2020-6-29"),
+  by="day")
+julio2020 <- seq.Date(
+  from=as.Date("2020-07-01"),
+  to=as.Date("2020-07-29"),
+  by="day")
+agosto2020 <- seq.Date(
+  from=as.Date("2020-08-01"),
+  to=as.Date("2020-08-29"),
+  by="day")
+sept2020 <- seq.Date(
+  from=as.Date("2020-09-01"),
+  to=as.Date("2020-09-29"),
+  by="day")
+oct2020 <- seq.Date(
+  from=as.Date("2020-10-01"),
+  to=as.Date("2020-10-29"),
+  by="day")
+nov2020 <- seq.Date(
+  from=as.Date("2020-11-01"),
+  to=as.Date("2020-11-29"),
+  by="day")
+diciembre2020 <- seq.Date(
+  from=as.Date("2020-12-01"),
+  to=as.Date("2020-12-29"),
+  by="day")
+#Añadimos valores 1 y 0 dependiento si estan dentro(1) o no
+data_precio_amzn$junio2020<-ifelse(data_precio_amzn$ref.date%in%junio2020,1,0)
+data_precio_amzn$julio2020<-ifelse(data_precio_amzn$ref.date%in%julio2020,1,0)
+data_precio_amzn$agosto2020<-ifelse(data_precio_amzn$ref.date%in%agosto2020,1,0)
+data_precio_amzn$sept2020<-ifelse(data_precio_amzn$ref.date%in%sept2020,1,0)
+data_precio_amzn$oct2020<-ifelse(data_precio_amzn$ref.date%in%oct2020,1,0)
+data_precio_amzn$nov2020<-ifelse(data_precio_amzn$ref.date%in%nov2020,1,0)
+data_precio_amzn$diciembre2020<-ifelse(data_precio_amzn$ref.date%in%diciembre2020,1,0)
+#ts
+junio2020ts<-ts(data_precio_amzn$junio2020, frequency = 12, start=c(2002,10))
+julio2020ts<-ts(data_precio_amzn$julio2020, frequency = 12, start=c(2002,10))
+agosto2020ts<-ts(data_precio_amzn$agosto2020, frequency = 12, start=c(2002,10))
+sep2020ts<-ts(data_precio_amzn$sept2020, frequency = 12, start=c(2002,10))
+oct2020ts<-ts(data_precio_amzn$oct2020, frequency = 12, start=c(2002,10))
+nov2020ts<-ts(data_precio_amzn$nov2020, frequency = 12, start=c(2002,10))
+diciembre2020ts<-ts(data_precio_amzn$diciembre2020, frequency = 12, start=c(2002,10))
+#espacio de prediccion
+#dummies
+timepred <- seq.Date(
+  from=as.Date("2022-10-01"),
+  to=as.Date("2023-10-10"),
+  by="month")
+junio2020 <- rep(0,13)
+julio2020 <- rep(0,13)
+agosto2020 <- rep(0,13)
+sep2020 <- rep(0,13)
+oct2020 <- rep(0,13)
+nov2020 <- rep(0,13)
+diciembre2020 <- rep(0,13)
+#data frame
+pred.df <- data.frame(timepred,junio2020,julio2020, agosto2020,sep2020, oct2020, nov2020, diciembre2020)
+#dummies
+d.enero <- seq.Date(
+  from=as.Date("2023-01-01"),
+  to=as.Date("2023-01-29"),
+  by="day")
+d.junio <- seq.Date(
+  from=as.Date("2023-06-01"),
+  to=as.Date("2023-06-29"),
+  by="day")
+d.dic <- seq.Date(
+  from=as.Date("2023-12-01"),
+  to=as.Date("2023-12-29"),
+  by="day")
+pred.df$d.enero<-ifelse(pred.df$timepred%in%d.enero,1,0)
+pred.df$d.junio<-ifelse(pred.df$timepred%in%d.junio,1,0)
+pred.df$d.dic<-ifelse(pred.df$timepred%in%d.dic,1,0)
+#series de tiempo predictivas
+f.junio2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.agosto2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.sep2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.oct2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.nov2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.julio2020 <- ts(pred.df$junio2020, frequency = 12, start=c(2022,10))
+f.enero <- ts(pred.df$d.enero, frequency = 12, start=c(2022,10))
+f.junio <- ts(pred.df$d.junio, frequency = 12, start=c(2022,10))
+f.diciembre <- ts(pred.df$d.dic, frequency = 12, start=c(2022,10))
+```
+
 
 
 Como lo vimos en las figuras \@ref(fig:pacfamzn) y \@ref(fig:acfamzn), es claro que debemos usar un valor $q$ de $1$ y $p$ de $1$. Pero tambien necesitamos diferenciar, lo cual corresponde al valor $d$. Así pues, dado que en las funciones de autocorrelacion solo vemos un pico arriba de la linea punteada azul, podemos asumir que el valor de diferenciación debe ser uno. Esto se debe seguir como regla de dedo, pero en general se debe usar el valor que minimice la desviacion estandar. Por tanto nuestro modelo debe ser $arima(1,1,1)$.
@@ -1297,12 +1389,16 @@ Utilizamos la funcion "auto.arima" para confirmar que nuestra serie de tiempo de
 auto.arima(price_amazn_ts, trace=TRUE)
 ```
 ```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
-ARIMA_price_amzn_ts_111<-arima(price_amazn_ts,order=c(1,1,1),method = "ML")
-ARIMA_price_amzn_pl_111<-Arima(price_amazn_ts,order=c(1,1,1),method = "ML")
+#sin embargo hay que controlar con nuestra variable dummy
+ARIMA_price_amzn_ts_111<-arima(price_amazn_ts,order=c(1,1,1),
+                               method = "ML",xreg=cbind(junio2020ts,julio2020ts,agosto2020ts,sep2020ts,oct2020ts,nov2020ts,diciembre2020ts))
+ARIMA_price_amzn_pl_111<-Arima(price_amazn_ts,order=c(1,1,1),
+                               method = "ML",xreg=cbind(junio2020ts,julio2020ts,agosto2020ts,sep2020ts,oct2020ts,nov2020ts,diciembre2020ts))
 ```
 
 ```{r, results='asis', echo=FALSE, fig.align='center', out.width="100%"}
-arima111<-stats::arima(price_amazn_ts,order=c(1,1,1),method = "ML")
+arima111<-stats::arima(price_amazn_ts,order=c(1,1,1),
+                               method = "ML",xreg=cbind(junio2020ts,julio2020ts,agosto2020ts,sep2020ts,oct2020ts,nov2020ts,diciembre2020ts))
 stargazer(arima111,type = "html", 
           notes=c("(p<0.1)=[*], (p<0.05)=[**], (p<0.01)=[***]"),
           title ="ARMA(1,1,1) de los precios de apertura de AMZN")
@@ -1326,19 +1422,17 @@ Para pronósticar el valor de la serie es necesario determinar cuál es el valor
     (\#eq:ARMApqFor)
 \end{eqnarray}
 ```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
-ARIMA_price_amzn_ts_111_F<-predict(ARIMA_price_amzn_ts_111, n.ahead = 12)
-ARIMA_price_amzn_ts_111_F
+ARIMA_price_amzn_ts_111_F<-predict(ARIMA_price_amzn_ts_111,n.ahead=13,newxreg=cbind(f.junio2020,f.julio2020,f.agosto2020,f.sep2020,f.oct2020,f.nov2020,f.diciembre))
+
+forecast.Arima <- forecast(ARIMA_price_amzn_pl_111,h=13, xreg=cbind(f.junio2020,f.julio2020,f.agosto2020,f.sep2020,f.oct2020,f.nov2020,f.diciembre))
+
 ```
-Valores en la base de datos original:
-```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
-pred<- forecast(ARIMA_price_amzn_ts_111,h=10)
-pred1 <- pred$mean
-union <- ts.union(price_amazn_ts,pred1)
-df.pred <- data.frame(union)
-df.pred[is.na(df.pred)] <- 0
-df.pred$complete <- df.pred$price_amazn_ts+df.pred$pred1
-head(df.pred)
+
+Valores:
+```{r, warning=FALSE, message=FALSE, fig.align='center', out.width="100%", results='asis'}
+forecast.Arima.df <- data.frame(forecast.Arima)
+stargazer(forecast.Arima.df,type = "html")
 ```
 ```{r predarima111, fig.cap="Predicción de $Arima(1,1,1)$", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
-plot(pred)
+plot(forecast.Arima, main ="Forecast ARIMA(1,1,1) de los precios de AMZN")
 ```
