--- a/13-SETAR-LINEARTEST.Rmd
+++ b/13-SETAR-LINEARTEST.Rmd
@@ -39,6 +39,67 @@ SETAR(p) se ve así:
    y_t=(\phi_{0,1}+\phi_{1,1}y_{t-1}+\dots+\phi_{p_{1},1}y_{t-p_1})(1-G(y_t-1;\gamma,c)+ y_t=(\phi_{0,2}+\phi_{1,2}y_{t-1}+\dots+\phi_{p_{2},2}y_{t-p_2})(G(y_t-1;\gamma,c))
 \end{equation}
 
+### SETAR EJEMPLO
+
+```{r message=FALSE, warning=FALSE, warning=FALSE, message=FALSE , fig.align='center', out.width="100%",  fig.align='center', out.width="100%", warning=FALSE, message=FALSE}
+#---------------------
+# Dependencias
+#---------------------
+
+#install.packages("pacman")
+#pacman nos permite cargar varias librerias en una sola línea
+library(pacman)
+pacman::p_load(tidyverse,BatchGetSymbols,ggplot2,lubridate,readxl,forecast,stats,stargazer,knitr,tseries,aTSA, TSA, rugarch, MSwM, MSGARCH, fGarch, ggpubr, knitr, MSGARCH, paletteer, MetBrewer, tsDyn, knitr)
+```
+
+```{r fig.show='hide', message=FALSE, , echo=TRUE, fig.align='center', out.width="100%", warning=FALSE,  fig.align='center', out.width="100%", warning=FALSE, message=FALSE}
+#Primero determinamos el lapso de tiempo
+pd<-as.Date("2002/9/30") #primer fecha
+pd
+#> [1] "2021-09-18"
+ld<- as.Date("2021/09/30")#última fecha
+ld
+#Intervalos de tiempo
+int<-"monthly"
+
+#Datos a elegir
+dt<-c("AMZN")
+
+#Descargando los valores
+data1<- BatchGetSymbols(tickers = dt,
+                       first.date = pd,
+                       last.date = ld,
+                       freq.data = int,
+                       do.cache = FALSE,
+                       thresh.bad.data = 0)
+
+#Generando data frame con los valores
+data_precio_amzn<-data1$df.tickers
+colnames(data_precio_amzn)
+```
+
+```{r, fig.align='center', out.width="100%", warning=FALSE, message=FALSE, fig.align='center', out.width="100%"}
+#original
+price_amazn_ts<-ts(data_precio_amzn$price.open, frequency = 12, start=c(2002,09))
+#logartimo
+lprice_amazn_ts<-ts(log(data_precio_amzn$price.open), frequency = 12,start=c(2002,09))
+#diferencias logaritmicas(cambio porcential)
+dlprice_amazn_ts<-ts(log(data_precio_amzn$price.open)-lag(log(data_precio_amzn$price.open),1), frequency = 12, start=c(2002,10))
+dlprice_amazn_ts<-na.omit(dlprice_amazn_ts)
+```
+
+```{r}
+selectSETAR(price_amazn_ts, m=1)
+setar <- setar(price_amazn_ts, m=2, mL=1, MH=1, thDelay=0)
+summary(setar)
+```
+
+### STAR Ejemplo
+```{r}
+star <- star(price_amazn_ts, m=2, noRegimes=2, d = 1, trace=TRUE)
+summary(star)
+```
+
 ## Pruebas de detección lineal.
 
 ### Test SETAR
@@ -48,6 +109,22 @@ Concretamente, utilizamos los estimados del modelo SETAR para definir F que comp
         F(\hat{c})=n\left(\frac{\tilde{\sigma^2}-\hat{\sigma^2}}{\hat{\sigma^2}} \right)
     \end{equation}
 Donde $\tilde{\sigma^2}$ es un estimado de la varianza residual. $\tilde{\sigma^2}=\sum a_{t=1}^n\tilde{\varepsilon^2_t}$ donde $\tilde{\varepsilon^2_t}=y_t-\hat{\phi^{'}}x_t$ y $\hat{\sigma^2}=\sum a_{t=1}^n\hat{\varepsilon^2_t}(c)$.
+
+#### Ejemplo
+```{r warning=FALSE}
+#1vs2 para indicar ARvsSETAR
+setarTest(
+      price_amazn_ts,
+      m=1,
+      thDelay = 0,
+      trim = 0.1,
+      nboot = 100,
+      seed = 1234
+)
+```
+
+Por tanto sabemos que no es lineal.
+
 
 ### Test STAR
 
@@ -158,3 +235,18 @@ se distribuye asintóticamente $\chi^2$ con el número de variables en $z_t$.
 \end{equation}
     
 Por lo que donde los residuales $\hat{\epsilon_t^2}$ se obtienen del  del modelo de media condicional de la serie de tiempo observada. Se distribuye $\chi^2(q)$. Este test es equivalente a hacer uno para el GARCH(p,q)
+
+__En el capítulo anterior al hacer las simulaciones de Monte Carlo demostramos como nuestros estimadores son consistentes y, por consiguiente, se hace cierto test demostrando que no hay necesidad de cambiar de tener más de un régimen.__ Esto se puede ver en la Figura \@ref(fig:cambgarch).
+
+ Con la matriz:
+
+```{r}
+kable(P.matrix <- matrix(c(0.9577,0.7307,0.0423,0.2693),2,2), caption = "Matriz de transicion GARCH", "html")
+```
+
+Y el plot de las transiciones:
+```{r cambgarch, fig.cap = "Cambios de régimen en el modelo GARCH", fig.align='center', echo=FALSE, out.width="100%"}
+
+knitr::include_graphics("imagenes/rplot.jpg")
+
+```
